ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkr-ingress
spec:
  tls:
  - hosts:
    - linkr.local
    secretName: my-tls-secret
  rules:
    - host: linkr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5000
