network-policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgres-netpol
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: rest-api
      ports:
        - port: 5432
  egress: []

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: rest-api-netpol
spec:
  podSelector:
    matchLabels:
      app: rest-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
        - port: 5000
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: postgres
      ports:
        - port: 5432

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-netpol
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - ports:
      - port: 5000
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: rest-api
      ports:
        - port: 5000
